@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2024, 2025 Obeo.
+ * Copyright (c) 2024, 2026 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -12,8 +12,6 @@
  *******************************************************************************/
 package org.eclipse.syson.diagram.common.view.tools;
 
-import java.util.List;
-
 import org.eclipse.sirius.components.collaborative.diagrams.DiagramContext;
 import org.eclipse.sirius.components.core.api.IEditingContext;
 import org.eclipse.sirius.components.diagrams.Node;
@@ -23,8 +21,10 @@ import org.eclipse.sirius.components.view.builder.generated.view.ViewBuilders;
 import org.eclipse.sirius.components.view.builder.providers.INodeToolProvider;
 import org.eclipse.sirius.components.view.diagram.NodeTool;
 import org.eclipse.sirius.components.view.emf.diagram.ViewDiagramDescriptionConverter;
+import org.eclipse.syson.diagram.common.view.services.ViewCreateService;
+import org.eclipse.syson.diagram.common.view.services.ViewNodeService;
 import org.eclipse.syson.diagram.services.aql.DiagramMutationAQLService;
-import org.eclipse.syson.util.AQLUtils;
+import org.eclipse.syson.util.AQLConstants;
 import org.eclipse.syson.util.ServiceMethod;
 
 /**
@@ -33,6 +33,8 @@ import org.eclipse.syson.util.ServiceMethod;
  * @author Jerome Gout
  */
 public class ActionFlowCompartmentNodeToolProvider implements INodeToolProvider {
+
+    private static final String NEW_INSTANCE = "newInstance";
 
     private final DiagramBuilders diagramBuilderHelper = new DiagramBuilders();
 
@@ -47,18 +49,24 @@ public class ActionFlowCompartmentNodeToolProvider implements INodeToolProvider 
                         ViewDiagramDescriptionConverter.CONVERTED_NODES_VARIABLE));
 
         var revealOperation = this.viewBuilderHelper.newChangeContext()
-                .expression(
-                        AQLUtils.getServiceCallExpression(Node.SELECTED_NODE, "revealCompartment",
-                                List.of("self", DiagramContext.DIAGRAM_CONTEXT, IEditingContext.EDITING_CONTEXT, ViewDiagramDescriptionConverter.CONVERTED_NODES_VARIABLE)));
+                .expression(ServiceMethod.of4(ViewNodeService::revealCompartment).aql(Node.SELECTED_NODE, AQLConstants.SELF, DiagramContext.DIAGRAM_CONTEXT, IEditingContext.EDITING_CONTEXT,
+                        ViewDiagramDescriptionConverter.CONVERTED_NODES_VARIABLE));
 
         var creationServiceCall = this.viewBuilderHelper.newChangeContext()
-                .expression(AQLUtils.getSelfServiceCallExpression("createSubActionUsage"))
+                .expression(AQLConstants.AQL + NEW_INSTANCE)
                 .children(addToExposedElements.build(), revealOperation.build())
+                .build();
+
+        var letNewInstance = this.viewBuilderHelper.newLet()
+                .variableName(NEW_INSTANCE)
+                .valueExpression(ServiceMethod.of0(ViewCreateService::createSubActionUsage).aqlSelf())
+                .children(creationServiceCall)
                 .build();
 
         return builder.name("New Action")
                 .iconURLsExpression("/icons/full/obj16/ActionUsage.svg")
-                .body(creationServiceCall)
+                .body(letNewInstance)
+                .elementsToSelectExpression(AQLConstants.AQL + NEW_INSTANCE)
                 .build();
     }
 }
