@@ -122,6 +122,8 @@ a|image::release-notes-enumeration-definition-after.png[Enumeration definition n
 - In diagrams, when creating an element from a compartment, it will not be displayed by default on the diagram, but only in the compartment.
 - In the _Advanced_ tab of the _Details_ view, _isComposite_ and _isReference_ properties (checkbox widgets) now have a help text.
 - In diagrams, a new tool named `Reference Subsetting` is available in the palette to create `ReferenceSubsetting` relationships between `Usage` elements.
+- In diagrams, many new tools now automatically select the `Elements` they create or expose on a diagram.
+This makes it easy to start editing newly created elements to give them proper names by starting to type directly when the new element appears.
 
 
 == Technical details
