@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2025 Obeo.
+ * Copyright (c) 2025, 2026 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -56,6 +56,7 @@ test.describe('diagram - general view', () => {
     await expect(portNode.nodeLocator).toBeAttached();
     diagram.expectNumberOfTopNodes(3);
     // The port can be displayed as a list item
+    await partDefinitionNode.click();
     await partDefinitionNode.revealElement('ports');
     const portsListNode = new PlaywrightNode(page, 'ports', 'List');
     await expect(portsListNode.nodeLocator).toBeAttached();
