@@ -1,0 +1,6 @@
+package Package1 {
+	view view1 : StandardViewDefinitions::GeneralView {
+		expose part1;
+	}
+	part part1;
+}
